diseño responsive para pantallas pequeñas,medianas y grandes computadora, con home y about me v1

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -31,26 +31,24 @@
             <div id="imagen">
                 <img src="../../../assets/images/foto_home_editada.jpg" alt="">
             </div>
-            <div id="contenido">
-                <h3><b>Biografia</b></h3>
-                <h1>Sobre mi</h1>
-                <p>Hola!, soy Jairo Garcia; un estudiante universitario y desarrollador Web Full-Stack viviendo 
+            <div id="info">
+                <p class="subtitulo"><b>Biografia</b></p>
+                <p class="titulo">Sobre mi</p>
+                <p class="texto_plano">Hola!, soy Jairo Garcia; un estudiante universitario y desarrollador Web Full-Stack viviendo 
                 en Guatemala. En mis años de experiencia como desarrollador he trabajado en el front-end y
                 back-end de paginas web, lo cual ha generado que ambos lados sean mis favoritos en un proyecto :).
                 he adquirido las habilidades necesarias para construir proyectos web que 
                 satisfagan los requerimientos del cliente.
                 </p>
-                <div id="info">
-                    <ul>
-                        <a href=""></a>
-                        <li><a href=""><img src="../../../assets/images/icons8-github.svg" alt="link github"></a></li>
-                        <li><a href=""><img src="../../../assets/images/icons8-instagram.svg" alt="link instagram"></a></li>
-                        <li><a href=""><img src="../../../assets/images/icons8-whatsapp.svg" alt="link whatsapp"></a></li>
-                        <li><a href=""><img src="../../../assets/images/icons8-facebook.svg" alt="link facebook"></a></li>
-                        <li><a href=""><img src="../../../assets/images/icons8-linkedin.svg" alt="link linkedin"></a></li>
-                    </ul>
+                <p id="contacto">Contactame!</p>
+                <div id="redes">
+                    <a href=""><img src="../../../assets/images/icons8-github.svg" alt="link github"></a>
+                    <a href=""><img src="../../../assets/images/icons8-instagram.svg" alt="link instagram"></a>
+                    <a href=""><img src="../../../assets/images/icons8-whatsapp.svg" alt="link whatsapp"></a>
+                    <a href=""><img src="../../../assets/images/icons8-facebook.svg" alt="link facebook"></a>
+                    <a href=""><img src="../../../assets/images/icons8-linkedin.svg" alt="link linkedin"></a>
                 </div>
-                <button>Descargar cv</button>
+                <button class="button"> Descargar CV</button>
             </div>
         </div>
     </div>
