animacion en redes

--- a/frontend/src/app/componentes/about-me/about-me.component.scss
+++ b/frontend/src/app/componentes/about-me/about-me.component.scss
@@ -193,6 +193,7 @@
                             height: 110px;
                             width: 110px;
                         }
+                        
                         margin-bottom: 4%;
                     }
                 }
@@ -406,6 +407,10 @@
                         img{
                             height: 90px;
                             width: 90px;
+                        }
+                        img:hover{
+                            height: 97px;
+                            width: 97px;
                         }
                         margin-bottom: 6%;
                     }
