agregadod e links de redes sociales

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -42,11 +42,11 @@
                 </p>
                 <p id="contacto">Contactame!</p>
                 <div id="redes">
-                    <a href=""><img src="../../../assets/images/icons8-github.svg" alt="link github"></a>
-                    <a href=""><img src="../../../assets/images/icons8-instagram.svg" alt="link instagram"></a>
-                    <a href=""><img src="../../../assets/images/icons8-whatsapp.svg" alt="link whatsapp"></a>
-                    <a href=""><img src="../../../assets/images/icons8-facebook.svg" alt="link facebook"></a>
-                    <a href=""><img src="../../../assets/images/icons8-linkedin.svg" alt="link linkedin"></a>
+                    <a href="https://github.com/jairoDGM" target="_blank"><img src="../../../assets/images/icons8-github.svg" alt="link github"></a>
+                    <a href="https://www.instagram.com/jairodaniel_gm/" target="_blank"><img src="../../../assets/images/icons8-instagram.svg" alt="link instagram"></a>
+                    <a href="https://wa.me/50255112882" target="_blank"><img src="../../../assets/images/icons8-whatsapp.svg" alt="link whatsapp"></a>
+                    <a href="https://www.facebook.com/jairo.garcia.JG" target="_blank"><img src="../../../assets/images/icons8-facebook.svg" alt="link facebook"></a>
+                    <a href="" target="_blank"><img src="../../../assets/images/icons8-linkedin.svg" alt="link linkedin"></a>
                 </div>
                 <button class="button"> Descargar CV</button>
             </div>
