avance de mis servicios

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -56,37 +56,46 @@
 
     <!--SECCION DE MYSERVICES-->
     <div id="MyServices">
-        <div class="titulo">
-            <h3><b>Lo que hago</b></h3>
-            <h1>Mis Servicios</h1>
-        </div>
-        <div id="tarjetas">
-
-            <div class="card">
-                <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                <div class="container">
-                    <h4><b>Gestion DB</b></h4>
-                    <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                    y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                </div>
+        <div id="contenido3">
+            <div id="header">
+                <p class="subtitulo"><b>Lo que hago</b></p>
+                <p class="titulo">Mis Servicios</p>
             </div>
-
-            <div class="card">
-                <img src="../../../assets/images/icons8-web-design-48.png" alt="">
-                <div class="container">
-                    <h4><b>Landing Pges</b></h4>
-                    <p>Diseño y Construccion de paginas web para presentacion, ideales para negocios o Empresas 
-                    que desean ampliar sus clientes potenciales.</p>
+            <div id="tarjetas">
+    
+                <div class="card">
+                    <div class="card-img">
+                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
+                    </div>
+                      <div class="card-info">
+                        <p class="text-title">Gestion DB</p>
+                        <p class="text-body">Creacion de Base de datos relacionales; especificas para las caracteristicas 
+                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
+                      </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <img src="../../../assets/images/icons8-developer-48.png" alt="">
-                <div class="container">
-                    <h4><b>Web Apps</b></h4>
-                    <p>Creacion de un ecosistema completo para tu pagina web, desde el frontend hasta el backend, y por su puesto la Base 
-                    de Datos. Ideal para negocios que desean operar e interactuar de distintas maneras con sus clientes/usuarios</p>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="../../../assets/images/icons8-web-design-48.png" alt="">
+                    </div>
+                      <div class="card-info">
+                        <p class="text-title">Landing Pages</p>
+                        <p class="text-body">Diseño y Construccion de paginas web para presentacion, ideales para negocios o Empresas 
+                            que desean ampliar sus clientes potenciales</p>
+                      </div>
                 </div>
+
+                <div class="card">
+                    <div class="card-img">
+                        <img src="../../../assets/images/icons8-developer-48.png" alt="">
+                    </div>
+                      <div class="card-info">
+                        <p class="text-title">Web Apps</p>
+                        <p class="text-body">Creacion de un ecosistema completo para tu pagina web, desde el frontend hasta el backend, y por su puesto la Base 
+                            de Datos. Ideal para negocios que desean operar e interactuar de distintas maneras con sus clientes/usuarios</p>
+                      </div>
+                </div>
+
             </div>
         </div>
     </div>
