nueva version de myservices v2, eliminacion de fotos viehas

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -62,38 +62,26 @@
                 <p class="titulo">Mis Servicios</p>
             </div>
             <div id="tarjetas">
-    
+
                 <div class="card">
-                    <div class="card-img">
-                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                    </div>
-                      <div class="card-info">
-                        <p class="text-title">Gestion DB</p>
-                        <p class="text-body">Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                      </div>
+                    <h1><b>Gestion DB</b></h1>
+                    <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
+                    <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
+                    y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
                 </div>
 
                 <div class="card">
-                    <div class="card-img">
-                        <img src="../../../assets/images/icons8-web-design-48.png" alt="">
-                    </div>
-                      <div class="card-info">
-                        <p class="text-title">Landing Pages</p>
-                        <p class="text-body">Diseño y Construccion de paginas web para presentacion, ideales para negocios o Empresas 
-                            que desean ampliar sus clientes potenciales</p>
-                      </div>
+                    <h1><b>Landing Pages</b></h1>
+                    <img src="../../../assets/images/web-page-browser-window-svgrepo-com.svg" alt="">
+                    <p>Diseño y Construccion de paginas web para presentacion, ideales para negocios o Empresas 
+                    que desean ampliar sus clientes potenciales.</p>
                 </div>
 
                 <div class="card">
-                    <div class="card-img">
-                        <img src="../../../assets/images/icons8-developer-48.png" alt="">
-                    </div>
-                      <div class="card-info">
-                        <p class="text-title">Web Apps</p>
-                        <p class="text-body">Creacion de un ecosistema completo para tu pagina web, desde el frontend hasta el backend, y por su puesto la Base 
-                            de Datos. Ideal para negocios que desean operar e interactuar de distintas maneras con sus clientes/usuarios</p>
-                      </div>
+                    <h1><b>Web Apps</b></h1>
+                    <img src="../../../assets/images/browser-website-svgrepo-com.svg" alt="">
+                    <p>Creacion de un ecosistema completo para tu pagina web, desde el frontend hasta el backend, y por su puesto la Base 
+                    de Datos. Ideal para negocios que desean operar e interactuar de distintas maneras con sus clientes/usuarios</p>
                 </div>
 
             </div>
