--- a/frontend/src/app/componentes/about-me/about-me.component.scss
+++ b/frontend/src/app/componentes/about-me/about-me.component.scss
@@ -281,87 +281,6 @@
            .button:active {
             filter: brightness(.8);
            }
-
-           .card {
-            width: 25%;
-            height: 254px;
-            border-radius: 1em;
-            padding: 1.9rem;
-            background: #f5f5f5;
-            position: relative;
-            display: flex;
-            align-items: flex-end;
-            transition: 0.4s ease-out;
-            box-shadow: 0px 7px 20px rgba(43, 8, 37, 0.2);
-            margin: 2%;
-           }
-           
-           .card:before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: block;
-            width: 100%;
-            height: 100%;
-            background: #49c5b6;
-            
-            z-index: 2;
-            transition: 0.5s;
-           }
-           
-           .card-info {
-            position: relative;
-            z-index: 3;
-            color: #f5f5f5;
-            opacity: 0;
-            transform: translateY(20%);
-            transition: 0.5s;
-           }
-           
-           /*Text*/
-           .text-title {
-            font-size: 1.5rem;
-            font-weight: 500;
-           }
-           
-           .text-body {
-            letter-spacing: 1px;
-            font-size: 0.9rem;
-            margin: 5px 0 15px 0;
-            color: black;
-           }
-           
-           
-           /*Image*/
-           .card-img {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: #ee9ca7;
-            background: linear-gradient(to bottom, #e7aeae, #ee9ca7);
-           }
-           
-           /*Hover*/
-           .card:hover {
-            transform: translateY(5%);
-           }
-           
-           .card:hover:before {
-            opacity: 1;
-           }
-           
-           .card:hover .card-info {
-            opacity: 1;
-            transform: translateY(0);
-           }
-           
-           .card-button:hover {
-            background: rgba(218, 77, 77, 0.4);
-            color: #f5f5f5;
-           }
         #mainBar{
            background-color: #000;
             width: 100%;
@@ -527,8 +446,59 @@
                     flex-direction: row;
                     justify-content: center;
                     justify-content: space-between;
-                  
                     margin: 1%;
+                    .card {
+                        width: 25%;
+                        
+                        background: #f8f9fa;
+                        position: relative;
+                        box-shadow: 15px 15px 50px #adb5bd75;
+                        text-align: center;
+                        transition: all 0.3s ease-in;
+                        img{
+                            width: 50%;
+                        }
+                      }
+                      
+                      .card h1 {
+                        margin: 5%;
+                        text-decoration: underline;
+                        text-decoration-color: #49c5b6;
+                      }
+
+                      .card p {
+                        transition: all 0.3s ease-in;
+                        color: white;
+                        margin: 6%;
+                        font-size: 20px;
+                      }
+                      
+                      .card:hover {
+                        cursor: pointer;
+                        box-shadow: none;
+                      }
+                      
+                      .card:hover p {
+                        transform: scale(1);
+                        color: #f8f9fa;
+                      }
+                      
+                      .card::before {
+                        content: '';
+                        width: 100%;
+                        height: 0;
+                        background: #49c5b6;
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                            /* Or Top */
+                        transition: 0.3s ease-in-out;
+                        z-index: 0;
+                      }
+                      
+                      .card:hover::before {
+                        height: 100%;
+                      }
                 }
 
             }
